<resources>
    <string name="app_name">MeFoodDiary</string>
    <string name="findFood">Hae ruokia</string>
    <string name="bSearch">Haku</string>
    <string name="title_home">Koti</string>
    <string name="title_ruuat">Ruuat</string>
    <string name="title_addMeal">Ateriat</string>
    <string name="action_info">Tietoa</string>
    <string name="action_search">Etsi</string>
    <string name="foodInfo_per100">Arvot per 100g</string>
    <string name="foodInfo_average_per100">Arvot keskimäärin per 100g</string>
    <string name="foodInfo_energia">Energiaa:</string>
    <string name="foodInfo_rasva">Rasvaa:</string>
    <string name="foodInfo_hiilihydraatti">Hiilihydraattia:</string>
    <string name="foodInfo_kuitu">Kuitua:</string>
    <string name="foodInfo_proteiini">Proteiinia:</string>
    <string name="foodInfo_suola">Suolaa:</string>
    <string name="tvSearch">Etsi</string>
    <string name="tCreators">Sovelluksen tekijät:</string>
    <string name="tNames">Elmeri Katainen\nMiro Norring\nJoonas Niemi</string>
    <string name="ingredient_tip">Hae lisättävää ainesosaa</string>
    <string name="add_meal">Lisää ateria</string>
    <string name="delete_ingredient">Poista</string>
    <string name="title_create_meal">Luo uusi ateria</string>
    <string name="infoText_foodsName">Ruuan nimi</string>
    <string name="text_energy">%1$skj/ %2$skcal</string>
    <string name="text_gram">%1$sg</string>
    <string name="text_mGram">%1$smg</string>
    <string name="add_foodToHistory">Lisää ruoka</string>
    <string name="meal_food_value">Aterian ravintotiedot</string>
    <string name="day_food_value">Päivän syötyjen ruokien ravintotietojen keskiarvot per 100g</string>
    <string name="add_mealToHistory">Valitse ateria:</string>
</resources>
